OAuth code and Changes made